client/css/style.css
* {
    box-sizing: border-box;
}

svg {
    width: 100%;
    height: auto;
}

h2 {
    text-align: center;
}

body {
    font-family: Sans, Arial, Helvetica, sans-serif;
    margin: 0;
}

/* Header/logo Title */
header {
    text-align: center;
    background: darkgray;
    color: white;
    padding: 2px;
    margin-bottom: 5px;
}

/* Main container */
.main {
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

/* Sidebar/left column */
.side {
    padding-right: 3%;
    padding-left: 3%;
    flex-grow: 0;
}

#checkboxContainer{
    display: flex; 
    flex-flow: column;
}

/* Map column */
.map {
    width: 10%;
    flex-grow: 1;
}

.charts{
    padding-right: 3%;
    padding-left: 3%;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
}

.bar {
    fill: steelblue;
}

.bar:hover {
    fill: #69b3a2;
}

#firstRowCharts{
    display: flex;
    flex-flow: row;
    justify-content: space-evenly;
}
#secondRowCharts{
    display: flex;
    flex-flow: row;
    justify-content: space-evenly;
}

.placeholder{
    height: 100px;
    margin: 0 auto;
    padding-top: 50px;
}

/* Footer */
footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    text-align: center;
    background: #ddd;
    padding: 5px;
}

